[gd_scene load_steps=8 format=3 uid="uid://co52g7coe8k5q"]

[ext_resource type="Script" path="res://world_objects/power_generator.gd" id="1_35jvo"]
[ext_resource type="Texture2D" uid="uid://b5f2vf632m5jh" path="res://assets/fire_bolt.png" id="1_582l5"]
[ext_resource type="Script" path="res://world_objects/Debug_UI.gd" id="3_yro7g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g07th"]
atlas = ExtResource("1_582l5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_45b55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g07th")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uhmc0"]
size = Vector2(20, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_xnrjs"]
radius = 101.02

[node name="PowerGenerator" type="StaticBody2D"]
collision_mask = 14
script = ExtResource("1_35jvo")
player_node_name = "Rob"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_45b55")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_uhmc0")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xnrjs")

[node name="Debug_UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_yro7g")

[node name="power" type="Label" parent="Debug_UI"]
layout_mode = 0
offset_left = -32.0
offset_top = -44.0
offset_right = 30.0
offset_bottom = -21.0
text = "POWER: 
"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
